@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.135 2005/07/03 20:43:02 goddess_skuld Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/conf.php.dist,v 1.136 2005/07/06 08:16:32 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -231,10 +231,6 @@ $conf->memory_limit="20M";
 // numbers and '_' character
 // Set to '' to disable
 $conf->allowed_char='';
-
-//IMAP Sent folder: the folder where outgoing mails are copied if the user
-// wants it. CAUTION: Don't use IMAP folder prefix (ie: INBOX.).
-$conf->sent_folder='Sent';
 
 // Select the CRLF to use.
 // According to rfc-822 CRLF is "\r\n"
